# hydromt_summa

./: .gitignore  README.rst  pyproject.toml
envs/: hydromt-summa.yml
examples/: test.nc  test_summa.py
examples/catalog/: ERA5_geopotential.nc  datacatalog_summa.yml  soil_classes.tif
examples/graham/: Analyse_test.ipynb  Untitled.ipynb  test_dask.ipynb  test_dask_netcdf4.ipynb  test_discretization.ipynb  test_summa.ipynb  test_summa.py  test_summa_shapefile.ipynb  with_pysumma.ipynb
examples/graham/dummy_summa/: attributes.nc  fileManager.txt  forcingFileList.txt  trialParams.nc
examples/graham/summa_bowatbanff_2008_2013/: attributes.nc  coldState.nc  fileManager.txt  forcingFileList.txt  outputControl.txt
examples/graham/summa_bowatbanff_dask/: forcing_2008-01-01-00-00-00_2008-01-31-23-00-00.nc  forcing_2008-02-01-00-00-00_2008-02-29-23-00-00.nc  forcing_2008-03-01-00-00-00_2008-03-31-23-00-00.nc  forcing_2008-04-01-00-00-00_2008-04-30-23-00-00.nc  forcing_2008-05-01-00-00-00_2008-05-31-23-00-00.nc  forcing_2008-06-01-00-00-00_2008-06-30-23-00-00.nc  forcing_2008-07-01-00-00-00_2008-07-31-23-00-00.nc  forcing_2008-08-01-00-00-00_2008-08-31-23-00-00.nc  forcing_2008-09-01-00-00-00_2008-09-30-23-00-00.nc  forcing_2008-10-01-00-00-00_2008-10-31-23-00-00.nc  forcing_2008-11-01-00-00-00_2008-11-30-23-00-00.nc  forcing_2008-12-01-00-00-00_2008-12-31-23-00-00.nc  forcing_2009-01-01-00-00-00_2009-01-31-23-00-00.nc  forcing_2009-02-01-00-00-00_2009-02-28-23-00-00.nc  forcing_2009-03-01-00-00-00_2009-03-31-23-00-00.nc  (+21 more)
examples/hydromt_catalog/: test_summa.py
hydromt_summa/: __init__.py  summa.py
(+327 files in other folders)
